# cutout

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: check.yml  release.yml
src/: main.rs
