[package]
name = "cutout"
version = "0.1.0"
edition = "2021"
authors = ["Backplane Contributors"]
description = "A command-line tool for extracting rectangular regions from images"
license = "LGPL-3.0-or-later"
repository = "https://github.com/backplane/cutout"
keywords = ["image", "crop", "cli", "tool"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rayon = "1.10"

# image crate with explicit codecs enabled
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "bmp",
    "gif",
    "tiff",
    "webp",
] }
